<resources>
    <string name="app_name">Athenas</string>
    <string name="login_title_2">Bienvenue à Athènas</string>
    <string name="input_name">NOM D\'UTILISATEUR</string>
    <string name="input_password">MOT DE PASSE</string>
    <string name="forget_password"><b>oublié mot de passe?</b></string>
    <string name="button_connect"><b>CONNECTER</b></string>
    <string name="have_no_account">Vous n\'avez pas encore \nun compte? <b><font color="#F1DA08">Se régistrer</font></b></string>
    <string name="or_connect_with">Ou connecter avec:</string>
    <string name="create_title">Allons créer un compte!</string>
    <string name="input_email">EMAIL</string>
    <string name="input_confirm">MOT DE PASSE (CONFIRMER)</string>
    <string name="read_and_accepted">J\'ai lu et j\'accepte les Conditions Générales et la Politique de Confidentialité</string>
    <string name="button_register">REGISTRER</string>
    <string name="have_already_account">Vous avez déjà un \ncompte? <font color="#F1DA08"><b>Connecter</b></font></string>
    <string name="recover_account">Récuperer mot-de-passe</string>
    <string name="enter_email">Saisissez votre adresse mail pour récuperer votre compte</string>
    <string name="enter_code_confirm">Saisissez le code de confirmation</string>
    <string name="code_four_numbers">Un code de 4-chiffres a été envoyé à %s@gmail.com</string>
    <string name="button_resend">Renvoyer code</string>
    <string name="button_continue">CONTINUER</string>
    <string name="post_user_name">anonyme</string>
    <string name="post_desc">Lorem Imptum De (BAC blanc TS - 2O19) - une excellente copie à lire. Copie 17/20.</string>
    <string name="grade_title">note:</string>
    <string name="grade">20/20</string>
    <string name="button_home">HOME</string>
    <string name="button_forum">FORUM</string>
    <string name="button_profile">PROFILE</string>
    <string name="user_name">user_name</string>
    <string name="user_class">classe</string>
    <string name="user_score_title">Score:</string>
    <string name="user_score">400</string>
    <string name="my_forums">Mes Communautés</string>
    <string name="input_search">Chercher</string>
    <string name="forum_title">Philosophie general</string>
    <string name="forum_message">Pour le BAC, est-ce que vous saves si il faut faire l\'iscription?</string>
    <string name="forum_message2">"@Philippe: Je vend des petits gateaux!"</string>
    <string name="type_message">Écrire un message...</string>

    <!-- SUBJECTS -->
    <string name="philo">Philosophie</string>
    <string name="math">Mathématique</string>
    <string name="chemistry">Chimie</string>
    <string name="physics">Physique</string>
    <string name="history">Histoire</string>
    <string name="geography">Géographie</string>
    <string name="science_computer">NSI</string>
    <string name="hist_spe">HGGSP</string>
    <string name="math_spe">Math (spé)</string>
    <string name="snt">SNT</string>
    <string name="french">Français</string>
    <string name="login_title_1">Salut 👋🏻\nBienvenue à Athénas</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="register_title">Allons créer un \ncompte!</string>
    <string name="app_terms">J\'ai lu et j\'accèpte les <font color="#F1DA08"><b>Conditions Générales</b></font> et la <font color="#F1DA08"><b>Politique de Confidentialité</b></font>.</string>
    <string name="invalid_email">Email invalid</string>
    <string name="invalid_password">Password invalid</string>
    <string name="enter">login</string>

</resources>